Fix all images being visible on initial opening
This will fix all images inside carousel being visible on initial opening

--- a/ArchiSteamFarm/www/css/app.css
+++ b/ArchiSteamFarm/www/css/app.css
@@ -227,3 +227,7 @@ button.bot-resumed:hover {
 .single-btn {
 	vertical-align: -webkit-baseline-middle;
 }
+
+[class^="games-carousel-"] .game-box:not(:first-child):not(.slick-slide){
+    display: none;    
+}
